<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qibla Locator &amp; Prayer Time</string>

    <string name="AdAppID">Settings</string>
    <string name="AdUnitID">ca-app-pub-2530669520505137/3635940647</string>

    <string name="action_settings">Settings</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="lahore">Alaqehdari Deh-e Shu</string>
    <string name="pakistan">Afghanistan</string>
    <string name="qibla_directions">Qibla Direction</string>
    <string name="clock_wise">261</string>
    <string name="settings_label">Settings</string>
    <string name="prefs_menu_title">Settings</string>
    <string name="about_menu_title">About</string>
    <string name="search_title">Search</string>
    <string name="screen_down_text"> Hold your phone horizontally and toward upside so that it\'s compass can  work properly.</string>
    <string name="no_location_yet">Please wait. Detecting your location&#8230;\n Or you can select your city in the Settings.</string>
    <string name="geo_location_info">Location Data Acquired.</string>
    <string name="latitude_north">N</string>
    <string name="latitude_south">S</string>
    <string name="longitude_east">E</string>
    <string name="longitude_west">W</string>
    <string name="gps_status">Use GPS</string>
    <string name="gps_status_summary">Enables using GPS for getting your location.</string>
    <string name="gps_prompt">Use GPS</string>
    <string name="gps_summary">Enables using GPS for getting your location.</string>
    <string name="state_location_title">Set your location manually</string>
    <string name="state_location_summary">Select one of province capitals of Iran if you are near them.</string>
    <string name="about_title_text">Qibla Locator &amp; Prayer</string>
    <string name="about_text">Qibla Locator &amp; Prayer</string>

    <!-- Do not translate next two tag, it's used by program for other reasons -->
    <string name="gps_pref_key">GPS_LOCATION_PREF</string>
    <string name="state_location_pref_key">state_LOCATION_PREF</string>
    <string name="release_date">Oct 4, 2014\n</string>
    <string name="version">Version 1.0</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="prayer_time_now">It\'s prayer time now</string>

    <!-- Messages -->
    <string name="exit_message">Do you want to exit?</string>
    <string name="ok_string">OK</string>
    <string name="no_string">No</string>
    <string name="rate_us_string">Rate Us</string>
    <string name="on_string">ON</string>
    <string name="off_string">OFF</string>

    <!-- Prayer Names -->
    <string name="fajar">Fajar</string>
    <string name="shrooq">Shorook</string>
    <string name="zuhur">Zuhur</string>
    <string name="asar">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>

    <!-- Juristics -->
    <string name="title_select_juristic">Select Juristic</string>
    <string name="hanafi">Hanafi</string>
    <string name="shafii">Shafii</string>
    <string name="malaki">Malaki</string>
    <string name="hanbali">Hanbali</string>

    <!-- Calculation Methods -->
    <string name="title_select_calc_method">Select Calculation Method</string>
    <string name="jafari">Jafari</string>
    <string name="karachi">Karachi</string>
    <string name="isna">ISNA</string>
    <string name="mwl">MWL</string>
    <string name="makkah">Makkah</string>
    <string name="egypt">Egypt</string>
    <string name="custom">Custom</string>
    <string name="tehran">Tehran</string>

    <!-- Settings Screen -->
    <string name="country_string">COUNTRY</string>
    <string name="city_string">CITY</string>
    <string name="juristics_string">JURISTICS</string>
    <string name="adhan_audio_string">ADHAN AUDIO</string>
    <string name="calc_method_string">METHOD</string>
    <string name="gps_location_string">GPS</string>
    <string name="language_string">Language</string>
    <string name="daylight_saving_string">DAYLIGHT SAVING</string>

    <!-- ToolTip -->
    <string name="like_on_facebook">Like on Facebook</string>

    <!-- Time -->
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="after">after</string>
    <string name="its">It\'s</string>
    <string name="at">at</string>
    <string name="time">time.</string>

    <!-- Select Language -->
    <string name="title_select_lannguage">Select Language</string>

    <!-- Google API -->
    <string name="google_play_services_version">5089000</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Today\'s Status</item>
        <item>Ramadan Calendar</item>
        <item>Azan</item>
        <item>Kalimas</item>
        <item>Settings</item>
        <item>Share This App</item>
        <item>MoreApps</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/app_home</item>
        <item>@drawable/azan</item>
        <item>@drawable/kalma</item>
        <item>@drawable/azan</item>
        <item>@drawable/kalma</item>
        <item>@drawable/ic_setting</item>
        <item>@drawable/ic_share</item>
        <item>@drawable/moreapps</item>
    </array>

    <array name="qalma_name_list">
        <item>1st Kalma Tayyibah</item>
        <item>2nd Kalma Shahaadat</item>
        <item>3rd Kalma Tamjeed</item>
        <item>4th Kalma Tawheed</item>
        <item>5th Kalma Astaghfar</item>
        <item>6th Kalma Radd Kufr</item>
    </array>

    <array name="qalma_list">
        <item>لَآ اِلٰهَ اِلَّا اللّٰهُ مُحَمَّدٌ رَّسُوْلُ اللّٰهِؕ</item>
        <item>اَشْهَدُ اَنْ لَّآ اِلٰهَ اِلَّا اللہُ وَحْدَهٗ لَا شَرِيْكَ لَهٗ وَ اَشْهَدُ اَنَّ
            مُحَمَّدً اعَبْدُهٗ وَرَسُوْلُهٗ
        </item>
        <item>سُبْحَان اللهِ وَ الْحَمْدُ لِلّهِ وَ لآ اِلهَ اِلّا اللّهُ وَ اللّهُ اَكْبَرُ وَلا
            حَوْلَ وَلاَ قُوَّة ِ الَّا بِاللّهِ الْعَلِىّ الْعَظِيْم
        </item>
        <item>لَآ اِلٰهَ اِلَّا اللهُ وَحْدَهٗ لَا شَرِيْكَ لَهٗ لَهُ الْمُلْكُ وَ لَهُ الْحَمْدُ
            يُحْىٖ وَ يُمِيْتُ وَ هُوَحَیٌّ لَّا يَمُوْتُ اَبَدًا اَبَدًاؕ ذُو الْجَلَالِ
            وَالْاِكْرَامِؕ بِيَدِهِ الْخَيْرُؕ وَهُوَ عَلٰى كُلِّ شیْ ٍٔ قَدِیْرٌؕ
        </item>
        <item>اَسْتَغْفِرُ اللهَ رَبِّىْ مِنْ كُلِّ ذَنْۢبٍ اَذْنَبْتُهٗ عَمَدًا اَوْ خَطَا ًٔ
            سِرًّا اَوْ عَلَانِيَةً وَّاَتُوْبُ اِلَيْهِ مِنَ الذَّنْۢبِ الَّذِیْٓ اَعْلَمُ وَ مِنَ
            الذَّنْۢبِ الَّذِىْ لَآ اَعْلَمُ اِنَّكَ اَنْتَ عَلَّامُ الْغُيُوْبِ وَ سَتَّارُ
            الْعُيُوْبِ و َغَفَّارُ الذُّنُوْبِ وَ لَا حَوْلَ وَلَا قُوَّةَ اِلَّا بِاللهِ
            الْعَلِىِّ الْعَظِيْمِؕ
        </item>
        <item>اَللّٰهُمَّّ اِنِّیْٓ اَعُوْذُ بِكَ مِنْ اَنْ اُشْرِكَ بِكَ شَيْئًا وَّاَنَآ اَعْلَمُ
            بِهٖ وَ اَسْتَغْفِرُكَ لِمَا لَآ اَعْلَمُ بِهٖ تُبْتُ عَنْهُ وَ تَبَرَّأْتُ مِنَ
            الْكُفْرِ وَ الشِّرْكِ وَ الْكِذْبِ وَ الْغِيْبَةِ وَ الْبِدْعَةِ وَ النَّمِيْمَةِ وَ
            الْفَوَاحِشِ وَ الْبُهْتَانِ وَ الْمَعَاصِىْ كُلِّهَا وَ اَسْلَمْتُ وَ اَقُوْلُ لَآ
            اِلٰهَ اِلَّا اللهُ مُحَمَّدٌ رَّسُوْلُ اللهِؕ
        </item>
    </array>

    <string-array name="qalma_list_trans">
        <item>There is none worthy of worship but Allah, Muhammad [peace be upon him] is the messenger of Allah.</item>
        <item>I bear witness that (there is) no God except Allah; One is He, no partner hath He, and I bear witness that Muhammad (Sall-Allahu Alayhi wa Sallam) is His Servant and Messenger.</item>
        <item>Flawless is Allah and the Praise is of Allah, and (there is) no God except Allah, and Allah is the Greatest. And (there is) neither might nor power except with Allah, the Sublime, the Tremendous.</item>
        <item>(There is) no God except Allah - One is He, no partners hath He. His is the Dominion, and His is the Praise. He gives life and causes death, and He is Living, who will not die, never. He of Majesty and Munificence. Within His Hand is (all) good. And He is, upon everything, Able (to exert His Will).</item>
        <item>"I seek forgiveness from Allah, my Lord, from every sin I committed knowingly or unknowingly, secretly or openly, and I turn towards Him from the sin that I know and from the sin that I do not know. Certainly You, You (are) the knower of the hidden things and the Concealer (of) the mistakes and the Forgiver (of) the sins. And (there is) no power and no strength except from Allah, the Most High, the Most Great".</item>
        <item>"O Allah! I seek protection in You from that I should not join any partner with You and I have knowledge of it. I seek Your forgiveness from that which I do not know. I repent from it (ignorance) and I reject disbelief (kufr) and joining partners with You (shirk) and of falsehood and slandering (gheebat) and innovation in religion (bid'at) and tell-tales (nameemat) and bad, evil deeds (fawahish) and the blame and the disobedience, all of them. I submit to Your will and I believe and I declare: There is none worthy of worship except Allah and Muhammad( Peace Be Upon On Him) is His Messenger."</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="txtSehri">SEHAR</string>
    <string name="txtIftar">IFTAR</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>