<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/locationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/location"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ellipsize="end"
                android:gravity="left"
                android:maxLines="1"
                android:text="@string/lahore"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/green_dark1" />

            <TextView
                android:id="@+id/countryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawablePadding="5dp"
                android:gravity="left|center_vertical"
                android:maxLines="1"
                android:text="@string/pakistan"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/green_dark1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/qibla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/qibla"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/qiblaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/qibla_directions"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/qiblaAngleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/clock_wise"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>