<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/title_select_juristic"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/juristicShafiiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingRight="150dp"
                android:text="@string/shafii"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxShafii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/custom_check_box_for_juristic"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/juristicHanafiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingRight="150dp"
                android:text="@string/hanafi"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxHanafi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/custom_check_box_for_juristic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/juristicMalakiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingRight="150dp"
                android:text="@string/malaki"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxMalaki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/custom_check_box_for_juristic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/juristicHanbaliLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingRight="150dp"
                android:text="@string/hanbali"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxHanbali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/custom_check_box_for_juristic" />
        </LinearLayout>

        <Button
            android:id="@+id/submitJuristic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/ok_btn" >
        </Button>
    </LinearLayout>

</LinearLayout>