<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_bg"
    android:orientation="vertical"
    tools:context=".MainActivity" xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:shrinkColumns="1"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/settings_contry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_bgs"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/country_string"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/contry_logo"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/country_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/selectedCountry"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:text="@string/country_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/settings_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgs"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/city_string"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/city_logo"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/city_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/selectedCity"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:text="@string/country_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/settings_juristic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgs"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/juristic_string"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/juristic_logo"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/juristics_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/selectedJuristic"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:text="@string/country_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/settings_calc_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgs"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/calc_method_string"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/calc_method_logo"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/calc_method_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/selectedCalcMethod"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:text="@string/makkah"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/settings_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgs"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/gps_string"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/on_off_button_selector"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:padding="5dp"
                    android:text="@string/gps_location_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/on_off_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:gravity="right|center_vertical" />
            </TableRow>

            <TableRow
                android:id="@+id/settings_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgs"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/language_string"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/gps"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/language_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/selectedLanguage"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:text="@string/makkah"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/settings_adhan_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgs"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/adhan_string"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/adhan_logo"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/adhan_audio_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/settings_daylight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bgs"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/dayligh_saving_string"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/daylight_saving_string"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3411067001503831/5037639708" >
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</RelativeLayout>